# chat-app

./: .env  .env.example  .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt  test_app.py
accounts/: adapters.py  admin.py  forms.py  models.py  urls.py  views.py
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_rename_is_read_message_is_deleted_message_deleted_at_and_more.py
chat/templatetags/: chat_extras.py
config/: asgi.py  settings.py  urls.py
static/assets/: manifest.json
static/assets/css/: style.css
static/assets/js/: chat.js
static/chat/: chat.css  chat.js
static/css/: style.css
staticfiles/css/: style.css
staticfiles/js/: chat.js
templates/: base.html
templates/account/: login.html  signup.html
templates/accounts/: profile.html
templates/chat/: base.html  chat_room.html  create_group.html  home.html  index.html  profile.html  search_users.html  test_static.html
templates/chat/auth/: login.html  register.html
templates/chat/partials/: message_bubble.html
